<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#F8F8F8"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    tools:context=".MainActivity">
  <LinearLayout
      android:layout_marginTop="9dp"
      android:layout_width="wrap_content"
      android:layout_marginBottom="15dp"
      android:layout_height="wrap_content">
<com.google.android.material.imageview.ShapeableImageView
    android:id="@+id/person"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="28dp"
    android:layout_alignParentTop="true"
    android:scaleType="fitCenter"
    android:src="@drawable/img"
    app:shapeAppearanceOverlay="@style/RoundedSquare"
    />
  </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="24px"
      android:layout_marginTop="12px"
      android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="@style/name"
        android:textStyle="bold"
        />
      <TextView
          android:id="@+id/threeHour"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:lineSpacingExtra="4sp"
          android:text="@string/day"
          android:background="@drawable/frame_26067"
          android:layout_marginStart="50dp"
          android:layout_marginEnd="8dp"
          android:textAppearance="@style/day" />

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginStart="24px"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/Engineer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Eng"
        android:textAppearance="@style/Eng"
        android:fontFamily="@font/dmsansamediam"
        />

    <TextView
        android:layout_width="44dp"
        android:layout_height="16dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Russ"
        android:textAppearance="@style/Russ"
        android:fontFamily="@font/dmsansamediam"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="24px"
      android:layout_marginEnd="8dp"
      android:orientation="horizontal">
    <ImageView
        android:id="@+id/icon"
        android:layout_width="12dp"
        android:layout_height="10dp"
        android:layout_marginTop="4dp"

        android:background="@drawable/ic_baseline_location_on_24"
        />
    <TextView
        android:id="@+id/location"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:text="@string/location"
        android:textAppearance="@style/location"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/dmsans"
        />
    <TextView
        android:id="@+id/dayFive"
        android:layout_width="61dp"
        android:layout_height="16dp"

        android:layout_marginStart="96dp"
        android:layout_marginEnd="7dp"
        android:text="@string/dayFive"
        android:textAppearance="@style/dayFive"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="9dp"
      android:layout_marginStart="24px"
      android:orientation="horizontal">
    <TextView
        android:id="@+id/reviews_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12px"

        android:text="@string/reviews_"
        android:textAppearance="@style/reviews_"

        />
    <TextView
        android:id="@+id/eva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12px"
        android:layout_marginStart="8dp"
        android:text="@string/eva"
        android:textAppearance="@style/eva"
        />
    <ImageView
        android:id="@+id/star_4"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="16px"
        android:layout_marginStart="4dp"
        android:background="@drawable/ic_baseline_star_24"
        />

  </LinearLayout>
</LinearLayout>
</LinearLayout>